; ModuleID = '/home/carl/AnghaBench/openssl/crypto/bio/extr_bss_null.c_null_ctrl.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/bio/extr_bss_null.c_null_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, i64, i8*)* @null_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @null_ctrl(i32* %0, i32 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  store i64 1, i64* %9, align 8
  %10 = load i32, i32* %6, align 4
  switch i32 %10, label %13 [
    i32 131, label %11
    i32 137, label %11
    i32 130, label %11
    i32 129, label %11
    i32 136, label %11
    i32 138, label %11
    i32 134, label %12
    i32 133, label %12
    i32 135, label %12
    i32 132, label %12
    i32 128, label %12
  ]

11:                                               ; preds = %4, %4, %4, %4, %4, %4
  store i64 1, i64* %9, align 8
  br label %14

12:                                               ; preds = %4, %4, %4, %4, %4
  br label %13

13:                                               ; preds = %4, %12
  store i64 0, i64* %9, align 8
  br label %14

14:                                               ; preds = %13, %11
  %15 = load i64, i64* %9, align 8
  ret i64 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
